k8_manifestfile/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    kubernetes.io/ingress.class: "gce"
    ingress.gcp.kubernetes.io/allow-http: "true"
    ingress.gcp.kubernetes.io/global-static-ip-name: "global-lb-ip"
spec:
  # defaultBackend: 
  #   service:
  #     name : default-backend
  #     port:
  #       number: 80
        
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3500
          # - path: /healthz
          #   pathType: Exact
          #   backend:
          #     service:
          #       name: api
          #       port:
          #         number: 3500
          # - path: /ready
          #   pathType: Exact
          #   backend:
          #     service:
          #       name: api
          #       port:
          #         number: 3500
          # - path: /started
          #   pathType: Exact
          #   backend:
          #     service:
          #       name: api
          #       port:
          #         number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
